{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "OnFeet",
            "id": "edc60668-bb67-46b8-94e0-5d94a7b9bb86",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e6aceea6-7ddc-4e3c-a0db-f66c41192e50",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AttackMain",
                    "type": "Button",
                    "id": "8aa875db-5292-4dcc-b7d2-c2ccbd3c243e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,Press",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackSuper",
                    "type": "Button",
                    "id": "f8e852bf-44a5-4691-98f4-bf0cf782424d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "f0d162b7-69d6-4537-bc99-4812a93d9bcd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6c6bc822-b44a-4642-bcf3-911d3d21768b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9b540501-785f-4735-88f3-c98da82af26a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d913cd66-1ba7-41ae-98b1-bc97f16f028d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a35a82d9-9056-4716-8499-82ac1b0b08c0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f6870266-a496-4f51-b12b-19dab69f398a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackMain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7e5c6ff-af8f-44d8-8abc-a93aeea009f0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackSuper",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}